==> activecontrols/EC-test_sw/lib/pressure/ADS131M0x.cpp <==
#include "ADS131M0x.h"
#include "Arduino.h"
#include "SPI.h"
#define DO_PRAGMA(x) _Pragma(#x)
#define INFO(x) DO_PRAGMA(message("\nREMARK: " #x))

uint8_t ADS131M0x::writeRegister(uint8_t address, uint16_t value) {
  uint16_t res;
  uint8_t addressRcv;
  uint8_t bytesRcv;
  uint16_t cmd = 0;

  SPI.beginTransaction(SPISettings(1000000, MSBFIRST, SPI_MODE1));
  digitalWrite(pin_num, LOW);
  delayMicroseconds(2);

  cmd = (CMD_WRITE_REG) | (address << 7) | 0;

  SPI.transfer16(cmd);
  SPI.transfer(0x00);

  SPI.transfer16(value);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

#ifndef IS_M02
  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#endif

  res = SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#ifndef IS_M02
  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#endif

  delayMicroseconds(2);
  digitalWrite(pin_num, HIGH);
  SPI.endTransaction();

  addressRcv = (res & REGMASK_CMD_READ_REG_ADDRESS) >> 7;
  bytesRcv = (res & REGMASK_CMD_READ_REG_BYTES);

  if (addressRcv == address) {
    return bytesRcv + 1;
  }
  return 0;
}

uint16_t ADS131M0x::readRegister(uint8_t address) {
  uint16_t cmd;
  uint16_t data;

  cmd = CMD_READ_REG | (address << 7 | 0);

  SPI.beginTransaction(SPISettings(1000000, MSBFIRST, SPI_MODE1));
  digitalWrite(pin_num, LOW);
  delayMicroseconds(2);

  SPI.transfer16(cmd);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#ifndef IS_M02
  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#endif
  data = SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#ifndef IS_M02
  SPI.transfer16(0x0000);
  SPI.transfer(0x00);

  SPI.transfer16(0x0000);
  SPI.transfer(0x00);
#endif

  delayMicroseconds(2);
  digitalWrite(pin_num, HIGH);
  SPI.endTransaction();

  return data;
}

void ADS131M0x::reset(uint8_t reset_pin) {
  pinMode(reset_pin, OUTPUT);
  digitalWrite(reset_pin, HIGH);
  delay(100);
  digitalWrite(reset_pin, LOW);
  delay(100);
  digitalWrite(reset_pin, HIGH);
  delay(1);
}

adcOutput ADS131M0x::readADC(void) {
  uint8_t x = 0;
  uint8_t x2 = 0;
  uint8_t x3 = 0;
  int32_t aux;
  adcOutput res;

  uint8_t crc_buf[9];

  SPI.beginTransaction(SPISettings(10000000, MSBFIRST, SPI_MODE1));
  digitalWrite(pin_num, LOW);
  delayMicroseconds(10);

  x = SPI.transfer(0x00);
  x2 = SPI.transfer(0x00);
  x3 = SPI.transfer(0x00);
  crc_buf[0] = x;
  crc_buf[1] = x2;
  crc_buf[2] = x3;

  res.status = ((x << 8) | x2);

  // read CH0 --------
  x = SPI.transfer(0x00);
  x2 = SPI.transfer(0x00);
  x3 = SPI.transfer(0x00);
  crc_buf[3] = x;
  crc_buf[4] = x2;
  crc_buf[5] = x3;

  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF) {
    res.ch0 = ((~(aux) & 0x00FFFFFF) + 1) * -1;
  } else {
    res.ch0 = aux;
  }

  // NOTE - THIS SHOULD NOT BE HERE! - Robert Nies
  // // faster!!!
  // SPI.transfer(0x00);
  // SPI.transfer(0x00);
  // SPI.transfer(0x00);

  // read CH1 --------
  x = SPI.transfer(0x00);
  x2 = SPI.transfer(0x00);
  x3 = SPI.transfer(0x00);
  crc_buf[6] = x;
  crc_buf[7] = x2;
  crc_buf[8] = x3;

  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF) {
    res.ch1 = ((~(aux) & 0x00FFFFFF) + 1) * -1;
  } else {
    res.ch1 = aux;
  }

#ifndef IS_M02
  x = SPI.transfer(0x00);
  x2 = SPI.transfer(0x00);
  x3 = SPI.transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF) {
    res.ch2 = ((~(aux) & 0x00FFFFFF) + 1) * -1;
  } else {
    res.ch2 = aux;
  }

  x = SPI.transfer(0x00);
  x2 = SPI.transfer(0x00);
  x3 = SPI.transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF) {
    res.ch3 = ((~(aux) & 0x00FFFFFF) + 1) * -1;
  } else {
    res.ch3 = aux;
  }
#endif

  x = SPI.transfer(0x00);
  x2 = SPI.transfer(0x00);
  x3 = SPI.transfer(0x00);
  aux = (x << 8) | x2;

  uint16_t crc = 0xFFFF;
  for (int i = 0; i < 9; i++) {
    crc ^= (crc_buf[i] << 8);
    for (int j = 0; j < 8; j++) {
      if (crc & 0x8000) {
        crc = (crc << 1) ^ 0x1021;
      } else {
        crc <<= 1;
      }
    }
  }
  res.crc_ok = crc == aux;

#ifdef DEBUG_PRESSURE_CRC
  if (!res.crc_ok) {
    for (int i = 0; i < 9; i++) {
      Serial.print(crc_buf[i], HEX);
      Serial.print("-");
    }
    Serial.print(aux, HEX);

    Serial.print(" <-> ");
    Serial.print(crc, HEX);
  } else {
    for (int i = 0; i < 9; i++) {
      Serial.print(crc_buf[i], HEX);
      Serial.print("-");
    }
    Serial.print(aux, HEX);
  }
#endif

  digitalWrite(pin_num, HIGH);
  delayMicroseconds(10);
  SPI.endTransaction();

  return res;
}
